err/geobricksgisvector.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Fiona-1.7.11.dist-info'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_Cors-3.0.3.dist-info'...
Listing './lib/python3.5/site-packages/GeobricksCommon-0.0.9.egg-info'...
Listing './lib/python3.5/site-packages/GeobricksGISVector-0.0.2.egg-info'...
Listing './lib/python3.5/site-packages/GeobricksProj4ToEPSG-0.0.15.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/argh'...
Listing './lib/python3.5/site-packages/argh-0.26.2.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/click_plugins'...
Listing './lib/python3.5/site-packages/click_plugins-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/cligj'...
Listing './lib/python3.5/site-packages/cligj-0.4.0.dist-info'...
Listing './lib/python3.5/site-packages/fiona'...
Listing './lib/python3.5/site-packages/fiona/.libs'...
Listing './lib/python3.5/site-packages/fiona/fio'...
Listing './lib/python3.5/site-packages/fiona/gdal_data'...
Listing './lib/python3.5/site-packages/fiona/proj_data'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_cors'...
Listing './lib/python3.5/site-packages/geobricks_common'...
Listing './lib/python3.5/site-packages/geobricks_common/config'...
Listing './lib/python3.5/site-packages/geobricks_common/core'...
Compiling './lib/python3.5/site-packages/geobricks_common/core/date.py'...
***   File "./lib/python3.5/site-packages/geobricks_common/core/date.py", line 51
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/geobricks_common/core/filesystem.py'...
***   File "./lib/python3.5/site-packages/geobricks_common/core/filesystem.py", line 17
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/geobricks_common/rest'...
Listing './lib/python3.5/site-packages/geobricks_gis_vector'...
Listing './lib/python3.5/site-packages/geobricks_gis_vector/config'...
Listing './lib/python3.5/site-packages/geobricks_gis_vector/core'...
Compiling './lib/python3.5/site-packages/geobricks_gis_vector/core/vector.py'...
***   File "./lib/python3.5/site-packages/geobricks_gis_vector/core/vector.py", line 80
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/geobricks_proj4_to_epsg'...
Listing './lib/python3.5/site-packages/geobricks_proj4_to_epsg/cli'...
Compiling './lib/python3.5/site-packages/geobricks_proj4_to_epsg/cli/cli.py'...
***   File "./lib/python3.5/site-packages/geobricks_proj4_to_epsg/cli/cli.py", line 10
    print get_epsg_code_from_proj4(proj4_string)
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/geobricks_proj4_to_epsg/config'...
Listing './lib/python3.5/site-packages/geobricks_proj4_to_epsg/core'...
Listing './lib/python3.5/site-packages/geobricks_proj4_to_epsg/data'...
Listing './lib/python3.5/site-packages/geobricks_proj4_to_epsg/data/pyproj'...
Listing './lib/python3.5/site-packages/geobricks_proj4_to_epsg/rest'...
Compiling './lib/python3.5/site-packages/geobricks_proj4_to_epsg/rest/proj4_to_epsg_rest.py'...
***   File "./lib/python3.5/site-packages/geobricks_proj4_to_epsg/rest/proj4_to_epsg_rest.py", line 45
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/geobricks_proj4_to_epsg/utils'...
Compiling './lib/python3.5/site-packages/geobricks_proj4_to_epsg/utils/epsg_json_file.py'...
***   File "./lib/python3.5/site-packages/geobricks_proj4_to_epsg/utils/epsg_json_file.py", line 17
    print p["epsg"]
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/geobricks_proj4_to_epsg/utils/pyproj_epsg_to_json.py'...
***   File "./lib/python3.5/site-packages/geobricks_proj4_to_epsg/utils/pyproj_epsg_to_json.py", line 29
    print "wrinting file"
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/geobricks_proj4_to_epsg_test'...
Listing './lib/python3.5/site-packages/geobricks_proj4_to_epsg_test/test_suite'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/munch'...
Listing './lib/python3.5/site-packages/munch-2.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pathtools'...
Listing './lib/python3.5/site-packages/pathtools-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/watchdog'...
Listing './lib/python3.5/site-packages/watchdog/observers'...
Listing './lib/python3.5/site-packages/watchdog/tricks'...
Listing './lib/python3.5/site-packages/watchdog/utils'...
Listing './lib/python3.5/site-packages/watchdog-0.8.3.egg-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
